[FIX] Preventing indicators bar to overflow screen to the right

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,8 @@
 
 html {
     height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 html, body {
